Redelegated tds to list partial, fixed spacing and style issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,38 @@
  *= require_tree .
  *= require_self
  */
+
+.menu {
+    border-bottom: black solid 2px;
+    background-color: #444;
+    height: 2em;
+    line-height: 2em;
+    color: white;
+}
+
+.menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.menu li {
+    float: left;
+}
+
+.menu li a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 0 1.25em;
+    text-decoration: none;
+    transition: background-color 0.25s;
+}
+
+.menu li a:hover {
+    background-color: #000000;
+    transition: background-color 0.05s;
+}
